# rust-filer

./: .gitignore  Cargo.toml  README.md
src/: cli.yaml  lib.rs  main.rs
