[package]
name = "rust_filer"
version = "0.1.0"
authors = ["Alan Alpert <416365416c@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
log = "0.4.0"
env_logger = "0.8.3"
lazy_static = "1.4.0"
clap = {version = "2.33", features = ["yaml"]}
